# tap-dbf

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  docker-compose.yaml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: constraints.txt  release.yaml  test.yml
tap_dbf/: __init__.py  __main__.py  client.py  tap.py
tests/: __init__.py  conftest.py  test_core.py
tests/data/: config.json  configGCS.json  configOS.json  configS3.json
